--- a/templates/conference/new_comment.html.twig
+++ b/templates/conference/new_comment.html.twig
@@ -11,7 +11,7 @@
 <div class="example-wrapper">
     <h1>Conférence {{ conference.name }}</h1>
     <h2>Ville : {{ conference.city }}</h2>
-    
+    {# Méthode form de twig #}
     {{ form(form_comment) }}
 </div>
 {% endblock %}
