--- a/templates/conference/index.html.twig
+++ b/templates/conference/index.html.twig
@@ -35,7 +35,7 @@
                 </select>
             </div>
         </div>
-        <div class="row">
+        <div class="row col-6">
             <button type="submit" class="btn btn-primary">Rechercher</button>
         </div>
     </form>
