--- a/templates/conference/new_conference.html.twig
+++ b/templates/conference/new_conference.html.twig
@@ -14,7 +14,7 @@
     <div >{{ message }}</div>
     {% endif %}
     {# Méthode form de twig #}
-    {{ form(form_comment) }}
+    {{ form(form_conference) }}
 </div>
 <a class="btn btn-success" href="{{ path('app_conference') }}">Retour</a>
 {% endblock %}
